corrected map fitting to not overlap with buttons

--- a/mapStyles.css
+++ b/mapStyles.css
@@ -7,20 +7,7 @@ body{
     overflow: hidden;
 }
 
-.google-map {
-    padding-bottom: 57%;
-    position: relative;
-    border-radius: 8px;
-}
 
-.google-map iframe {
-    height: 75%;
-    width: 85%;
-    left: 0;
-    top: 0;
-    position: absolute;
-    border-radius: 5px;
-}
 
 
 .side-buttons {
